--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -20,6 +20,7 @@
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
       <a href="/" class="btn">Start</a>
       <a href="/termine/" class="btn">Termine</a>
+      <a href="/faq/" class="btn">FAQ</a>
       <a href="/kontakt/" class="btn">Kontakt</a>
     </header>
 
